Base state for project

--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,105 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>webpack starterkit</title>
-</head>
-<body>
-  <h1>webpack starter</h1>
-  <p>✨ A lightweight foundation for your next webpack based frontend project.</p>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>So Energy frontend dev test</title>
+  </head>
+  <body>
+    <nav>
+      <ul class="nav">
+        <li role="link" data-colour="black">Black</li>
+        <li>
+          <button aria-haspopup="true" aria-controls="rgb" id="rgb-button">
+            RGB
+          </button>
+          <ul role="menu" id="rgb" role="menu" aria-labelledby="rgb-button">
+            <li role="menuitem" data-colour="red">Red</li>
+            <li role="menuitem" data-colour="green">Green</li>
+            <li role="menuitem" data-colour="blue">Blue</li>
+          </ul>
+        </li>
+        <li>
+          <button aria-haspopup="true" aria-controls="other" id="other-button">
+            Other
+          </button>
+          <ul role="menu" id="other" role="menu" aria-labelledby="other-button">
+            <li role="menuitem" data-colour="brown">Brown</li>
+            <li role="menuitem" data-colour="cyan">Cyan</li>
+            <li role="menuitem" data-colour="gold">Gold</li>
+            <li role="menuitem" data-colour="green">Green</li>
+            <li role="menuitem" data-colour="grey">Grey</li>
+            <li role="menuitem" data-colour="maroon">Maroon</li>
+            <li role="menuitem" data-colour="orange">Orange</li>
+            <li role="menuitem" data-colour="pink">Pink</li>
+            <li role="menuitem" data-colour="purple">Purple</li>
+            <li role="menuitem" data-colour="white">White</li>
+            <li role="menuitem" data-colour="yellow">Yellow</li>
+          </ul>
+        </li>
+      </ul>
+    </nav>
+    <section class="colour-boxes">
+      <label
+        ><div tabindex="-1" class="black"></div>
+        Black</label
+      >
+      <label
+        ><div tabindex="-1" class="red"></div>
+        Red</label
+      >
+      <label
+        ><div tabindex="-1" class="green"></div>
+        Green</label
+      >
+      <label
+        ><div tabindex="-1" class="blue"></div>
+        Blue</label
+      >
+      <label
+        ><div tabindex="-1" class="brown"></div>
+        Brown</label
+      >
+      <label
+        ><div tabindex="-1" class="cyan"></div>
+        Cyan</label
+      >
+      <label
+        ><div tabindex="-1" class="gold"></div>
+        Gold</label
+      >
+      <label
+        ><div tabindex="-1" class="green"></div>
+        Green</label
+      >
+      <label
+        ><div tabindex="-1" class="grey"></div>
+        Grey</label
+      >
+      <label
+        ><div tabindex="-1" class="maroon"></div>
+        Maroon</label
+      >
+      <label
+        ><div tabindex="-1" class="colour-box orange"></div>
+        Orange</label
+      >
+      <label
+        ><div tabindex="-1" class="colour-box pink"></div>
+        Pink</label
+      >
+      <label
+        ><div tabindex="-1" class="colour-box purple"></div>
+        Purple</label
+      >
+      <label
+        ><div tabindex="-1" class="colour-box white"></div>
+        White</label
+      >
+      <label
+        ><div tabindex="-1" class="colour-box yellow"></div>
+        Yellow</label
+      >
+    </section>
+  </body>
 </html>
